--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -155,7 +155,7 @@ jobs:
         
       - name: install swig
         run: |
-          echo "/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" >> /etc/ld.so.conf.d/occt.conf
+         
           sudo apt-get remove swig
           sudo apt-get remove swig4.0
           cd /home/runner/work/SurfacePsycho/swig-4.1.1
@@ -164,14 +164,14 @@ jobs:
           cd ../
           ls
           ln -s /usr/bin/swig3.0 /home/runner/work/SurfacePsycho/mon_swig/bin/swig
-        # export PATH="/home/runner/work/SurfacePsycho/mon_swig/bin/swig:$PATH"
+          echo .............................. 
+          export PATH="/home/runner/work/SurfacePsycho/mon_swig/bin/swig:$PATH"
           
         # echo .................................
         # cd /usr/bin/
         # ls
-
-
-          
+        # echo "/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" >> /etc/ld.so.conf.d/occt.conf
+  
       - name: 3rd party pyocct
         run: |
           sudo apt-get update
