--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -196,17 +196,18 @@ jobs:
           mkdir pyocc_mon_install
           cd pythonocc-core-7.7.2
           mkdir ma_build
-          echo ............................
-          cmake -LAH
-          echo ............................
-          cmake -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
-          -DOCCT_LIBRARY_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" \
-          -DPYTHONOCC_BUILD_TYPE=Release \
-          -DPYTHONOCC_INSTALL_DIRECTORY="/home/runner/work/SurfacePsycho/pyocc_mon_install" \
-          -DGP_PNT_HEADER_LOCATION="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade/gp_Pnt.hxx" \
-          -B="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/ma_build" \
-          -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2"
+          cmake -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2" \
+                -B="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/ma_build" \
+                -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
+                -DOCCT_LIBRARY_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" \
+                -DPYTHONOCC_BUILD_TYPE=Release \
+                -DPYTHONOCC_INSTALL_DIRECTORY="/home/runner/work/SurfacePsycho/pyocc_mon_install" \
+                -DGP_PNT_HEADER_LOCATION="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade/gp_Pnt.hxx"
           
+        
+        # echo ............................
+        # cmake -LAH
+        # echo ............................
       #     cd ../
       #     7z a hhhh /home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/
       #     ls
