--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -166,7 +166,7 @@ jobs:
           sudo ln -s /home/runner/work/SurfacePsycho/mon_swig/bin/swig /usr/bin/swig
           echo .............................. 
           export PATH="/home/runner/work/SurfacePsycho/mon_swig/bin/swig:$PATH"
-          
+
         # echo "/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" >> /etc/ld.so.conf.d/occt.conf
   
       - name: 3rd party pyocct
@@ -196,7 +196,7 @@ jobs:
           mkdir pyocc_mon_install
           cd pythonocc-core-7.7.2
           mkdir ma_build
-          cmake -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2" \
+          cmake -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2" -DSWIG_DIR="/home/runner/work/SurfacePsycho/mon_swig/bin/swig"\
                 -B="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/ma_build" \
                 -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
                 -DOCCT_LIBRARY_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" \
