--- a/.github/workflows/build_pyocct_linux.yml
+++ b/.github/workflows/build_pyocct_linux.yml
@@ -196,8 +196,9 @@ jobs:
           mkdir pyocc_mon_install
           cd pythonocc-core-7.7.2
           mkdir ma_build
-          cmake -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2" -DSWIG_DIR="/home/runner/work/SurfacePsycho/mon_swig/bin/swig"\
+          cmake -S="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2" \
                 -B="/home/runner/work/SurfacePsycho/pythonocc-core-7.7.2/ma_build" \
+                -DSWIG_DIR="/home/runner/work/SurfacePsycho/mon_swig/bin"\
                 -DOCCT_INCLUDE_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/include/opencascade" \
                 -DOCCT_LIBRARY_DIR="/home/runner/work/SurfacePsycho/OCCT_mon_install/lib" \
                 -DPYTHONOCC_BUILD_TYPE=Release \
