--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -120,10 +120,9 @@ jobs:
 
       - name: install python
         run: |
-          cd %ProgramFiles%
+          cd C:\msys64\usr\bin\
           ls
           cd D:\a\SurfacePsycho\
-          dir
           C:\msys64\usr\bin\wget.exe https://www.python.org/ftp/python/3.11.8/python-3.11.8-amd64.exe
           ls
           D:\a\SurfacePsycho\python-3.11.8-amd64.exe --Include_debug=1 --InstallAllUsers=1 --Include_symbols=1
