--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -123,7 +123,11 @@ jobs:
           cd D:\a\SurfacePsycho\
           mkdir python3.11
           C:\msys64\usr\bin\wget.exe https://www.python.org/ftp/python/3.11.8/python-3.11.8-amd64.exe
+          
+          echo ..............................................
+
           D:\a\SurfacePsycho\python-3.11.8-amd64.exe --Include_debug=1 --InstallAllUsers=1 --Include_symbols=1 --DefaultAllUsersTargetDir="D:\a\SurfacePsycho\python3.11"
+          
           set "PATH=D:\a\SurfacePsycho\python3.11;D:\a\SurfacePsycho\python3.11\Scripts\;%PATH%"
 
           7z a hhhh D:\a\SurfacePsycho\python3.11
