--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -126,7 +126,7 @@ jobs:
           
           echo ..............................................
 
-          D:\a\SurfacePsycho\python-3.11.8-amd64.exe --Include_debug=1 --InstallAllUsers=1 --Include_symbols=1 --DefaultAllUsersTargetDir="D:\a\SurfacePsycho\python3.11"
+          D:\a\SurfacePsycho\python-3.11.8-amd64.exe /quiet Include_debug=1 InstallAllUsers=1 Include_symbols=1 DefaultAllUsersTargetDir="D:\a\SurfacePsycho\python3.11"
           
           set "PATH=D:\a\SurfacePsycho\python3.11;D:\a\SurfacePsycho\python3.11\Scripts\;%PATH%"
 
