--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -153,9 +153,10 @@ jobs:
 
           echo "PYTHONPATH=D:\a\SurfacePsycho\python3.11" >> $GITHUB_PATH
           echo "PYTHONPATH=D:\a\SurfacePsycho\python3.11\Scripts" >> $GITHUB_PATH
+          echo "D:\a\SurfacePsycho\python3.11" >> $GITHUB_PATH
           echo "D:\a\SurfacePsycho\python3.11\Scripts" >> $GITHUB_PATH
-          echo "PYTHONPATH=D:\a\SurfacePsycho\python3.11" >> $GITHUB_ENV
-          set "PATH=D:\a\SurfacePsycho\python3.11;D:\a\SurfacePsycho\python3.11\Scripts;%PATH%"
+
+        # set "PATH=D:\a\SurfacePsycho\python3.11;D:\a\SurfacePsycho\python3.11\Scripts;%PATH%"
         # echo "::set-env name=PYTHONPATH::D:\a\SurfacePsycho\python3.11\Scripts"
         # echo "::set-env name=PYTHONPATH::D:\a\SurfacePsycho\python3.11"
 
