--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -145,8 +145,8 @@ jobs:
         run: |
           cd C:/hostedtoolcache/windows/Python/
           ls
-          del C:/hostedtoolcache/windows/Python/3.12.2
-          
+          rm C:\hostedtoolcache\windows\Python\3.12.2
+
       - name: install python
         run: |
           cd D:\a\SurfacePsycho\
