--- a/.github/workflows/CMakeLists.txt
+++ b/.github/workflows/CMakeLists.txt
@@ -106,7 +106,7 @@ if(PYTHONOCC_MESHDS_NUMPY)
     message(STATUS "Numpy include directory: ${Python3_NumPy_INCLUDE_DIRS}")
     set(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS} -DBUILD_MESHDS_NUMPY)
 else(PYTHONOCC_MESHDS_NUMPY)
-    find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+    find_package(Python3 3.11.8 COMPONENTS Interpreter Development REQUIRED)
 endif(PYTHONOCC_MESHDS_NUMPY)
 message(STATUS "Python3 interpreter:" ${Python3_EXECUTABLE})
 message(STATUS "Python include directory: ${Python3_INCLUDE_DIRS}")
