--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -153,7 +153,11 @@ jobs:
           cd D:\a\SurfacePsycho\
 
           cmd /c D:\a\SurfacePsycho\python-3.11.8-amd64.exe /quiet Include_debug=1 Include_symbols=1 PrependPath=1 DefaultJustForMeTargetDir="C:/hostedtoolcache/windows/Python/3.11.8"
+          
+      - name: setup swig
+        run : |
           echo "C:/hostedtoolcache/windows/Python/3.11.8" >> $GITHUB_PATH
+          echo "C:/hostedtoolcache/windows/Python/3.11.8" >> $GITHUB_ENV
         # mkdir python3.11
         # echo "PYTHONPATH=D:\a\SurfacePsycho\python3.11" >> $GITHUB_PATH
         # echo "PYTHONPATH=D:\a\SurfacePsycho\python3.11\Scripts" >> $GITHUB_PATH
