--- a/.github/workflows/Build_pyocct_windows.yml
+++ b/.github/workflows/Build_pyocct_windows.yml
@@ -208,7 +208,7 @@ jobs:
           rm CMakeLists.txt
           copy D:\a\SurfacePsycho\.github\workflows\CMakeLists.txt D:\a\SurfacePsycho\pythonocc-core-7.7.2\CMakeLists.txt
           mkdir ma_build
-          cmake -DOCCT_INCLUDE_DIR="D:/a/SurfacePsycho/OCCT_mon_install/inc" -DOCCT_LIBRARY_DIR="D:/a/SurfacePsycho/OCCT_mon_install/win64/vc14/lib" -DPYTHONOCC_BUILD_TYPE=Release -DPYTHONOCC_INSTALL_DIRECTORY="D:/a/SurfacePsycho/pyocc_mon_install" -DGP_PNT_HEADER_LOCATION="D:/a/SurfacePsycho/OCCT_mon_install/inc/gp_Pnt.hxx" -B="D:/a/SurfacePsycho/pythonocc-core-7.7.2/ma_build" -S="D:/a/SurfacePsycho/pythonocc-core-7.7.2"
+          cmake -DOCCT_INCLUDE_DIR="D:/a/SurfacePsycho/OCCT_mon_install/inc" -DOCCT_LIBRARY_DIR="D:/a/SurfacePsycho/OCCT_mon_install/win64/vc14/lib" -DPYTHONOCC_BUILD_TYPE=Release -DPYTHONOCC_INSTALL_DIRECTORY="D:/a/SurfacePsycho/pyocc_mon_install" -DGP_PNT_HEADER_LOCATION="D:/a/SurfacePsycho/OCCT_mon_install/inc/gp_Pnt.hxx" -B="D:/a/SurfacePsycho/pythonocc-core-7.7.2/ma_build" -S="D:/a/SurfacePsycho/pythonocc-core-7.7.2" -DPython3_FIND_STRATEGY=LOCATION -DPython3_FIND_FRAMEWORK=NEVER
           
       - name: cmake build
         run: |
