--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -34,4 +34,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: OCC-wind
-          path: /usr/local/miniconda/envs/pyoccenv/lib/python3.11/site-packages/OCC/
+          path: pyoccenv/lib/python3.11/site-packages/OCC/
