--- a/.github/workflows/pyocct_conda_linux.yml
+++ b/.github/workflows/pyocct_conda_linux.yml
@@ -14,16 +14,13 @@ jobs:
           activate-environment: pyoccenv
           python-version: 3.11
           auto-activate-base: false
-      - shell: bash -l {0}
-        run: |
+      - run: |
           conda info
           conda list
       - name: install pythonocc
-        shell: bash -l {0}
         run: |
           conda install -c conda-forge pythonocc-core=7.7.2
       - name: echo paths
-        shell: bash -l {0}
         run: |
           cd /usr/share/miniconda/envs
           tree -d pyoccenv
@@ -35,5 +32,6 @@ jobs:
           # echo "PYOCCPATH=$(conda info --all  | grep -i pythonocc-core)" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v3
         with:
-          name: OCC-linux-sans-deps
-          path: /usr/share/miniconda/envs/pyoccenv/lib/python3.11/site-packages/OCC/
+          name: OCC-linux-deps
+          path: /usr/share/miniconda/envs/pyoccenv/Library/bin
+          #/usr/share/miniconda/envs/pyoccenv/lib/python3.11/site-packages/OCC/
