--- a/.github/workflows/pyocct_conda_linux.yml
+++ b/.github/workflows/pyocct_conda_linux.yml
@@ -23,7 +23,7 @@ jobs:
       - name: echo paths
         run: |
           cd /usr/share/miniconda/envs
-          tree -d pyoccenv
+          tree -d -L 2 pyoccenv
           
         # echo $(conda info --all)
           # echo Ceux qui match :
